<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="80dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@null"
        android:padding="30dp"
        android:src="@drawable/logo_green_flag" />

    <LinearLayout
        android:id="@+id/ll_home_app_info"
        android:layout_width="match_parent"
        android:layout_height="269dp"
        android:layout_below="@id/iv_logo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/museosans_500"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/tv_home_app_descript"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <ImageView
                    android:id="@+id/iv_home_tick1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/tick" />

                <TextView
                    android:id="@+id/tv_txt_match_tick1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/museosans_300"
                    android:text="@string/tv_txt_home_1"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <ImageView
                    android:id="@+id/iv_home_tick2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/tick" />

                <TextView
                    android:id="@+id/tv_txt_match_tick2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/museosans_300"
                    android:text="@string/tv_txt_home_2"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <ImageView
                    android:id="@+id/iv_home_tick3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/tick" />

                <TextView
                    android:id="@+id/tv_txt_match_tick3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="4"
                    android:fontFamily="@font/museosans_300"
                    android:text="@string/tv_txt_home_3"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_create_accnt"
        android:layout_width="403dp"
        android:layout_height="47dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/gradient_button_background"
        android:fontFamily="@font/museosans_300"
        android:text="@string/btn_txt_create_accnt"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp" />

</RelativeLayout>